# rpi-db

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
rpi_server/: Cargo.toml
rpi_server/benches/: benchmarks.rs
rpi_server/src/: lib.rs  main.rs
rpi_server/src/core/: handlers.rs
rpi_server/src/domain/: database.rs  handlers.rs  mod.rs  repl.rs
rpi_server/src/network/: server.rs
rpi_server/src/repl/: parser.rs
rpi_server/src/storage/: bincode.rs  json.rs  mod.rs
rpi_server/tests/integration/: main.rs  repl.rs  util.rs
