[package]
name = "rpi-db"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
cucumber = "0.21.1"
reqwest = { version = "0.12.7", features = ["json"] }
serial_test = "3.1.1"

[[test]]
name = "cucumber"
path = "tests/cucumber/main.rs"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
macros = { path = "../macros" }
thiserror = "1.0.63"
rustyline = "14.0.0"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
bincode = "1.3.3"
